overflow bug

--- a/src/styles/MessageList.css
+++ b/src/styles/MessageList.css
@@ -5,9 +5,10 @@
     top: 0;
     background: white;
     z-index: 10;
-    min-height: 100vh;
+    height: 100vh;
     left: 100%;
     transition: 0.5s ease;
+    overflow:scroll;
   }
 
   .messagelist-component.active {
